--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,15 +15,15 @@ quarkus.smallrye-openapi.info-description=API de biblioteca do projeto ADA
 # mp.openapi.servers=https://api.interna.caixa.gov.br/biblioteca
 
 quarkus.datasource.db-kind=h2
-quarkus.dtasource.jdbc.url=jdbc:h2:mem:devbd;DB_CLOSE_DELAY=-1
-quarkus.dtasource.username=sa
-quarkus.dtasource.password=sa
+quarkus.datasource.jdbc.url=jdbc:h2:mem:devbd;DB_CLOSE_DELAY=-1
+quarkus.datasource.username=sa
+quarkus.datasource.password=sa
 
-quarkus.dtasource.jdbc.max-size=20
+quarkus.datasource.jdbc.max-size=20
 
-quarkus.hibernate-orm.schema-management.strategy=update
+quarkus.hibernate-orm.database.generation=update
 
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.bind-parameters=true
-quarkus.hibernate-orm.format-sql=true
+quarkus.hibernate-orm.log.format-sql=true
 %dev.quarkus.datasource.dev-ui.allow-sql=true
