Alterando 'application.properties' e 'import.sql'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,24 @@
-
-# Metadados do OpenAPI (aparecem no Swagger UI)
+# OpenAPI
 quarkus.smallrye-openapi.info-title=Biblioteca API
 quarkus.smallrye-openapi.info-version=1.0.0
 quarkus.smallrye-openapi.info-description=API de biblioteca do projeto ADA
 
-# Habilitar Swagger UI também em PRODUÇÃO (por padrão só aparece em dev/test)
-# Use com cuidado e conforme a política interna
-#quarkus.swagger-ui.always-include=true
-
-# (Opcional) Mudar o path da UI (default é /q/swagger-ui)
-# quarkus.swagger-ui.path=/docs
-
-# (Opcional) Prefixar o servidor exposto no documento (útil atrás de gateway/reverso)
-# mp.openapi.servers=https://api.interna.caixa.gov.br/biblioteca
-
+# H2
 quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.url=jdbc:h2:mem:devbd;DB_CLOSE_DELAY=-1
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
+%dev.quarkus.datasource.jdbc.max-size=5
 
-quarkus.datasource.jdbc.max-size=20
+# Hibernate / Panache
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
+%dev.quarkus.hibernate-orm.sql-load-script=import.sql
 
-quarkus.hibernate-orm.database.generation=update
+# Logs
+%dev.quarkus.hibernate-orm.log.sql=true
+%dev.quarkus.hibernate-orm.log.bind-parameters=true
+%dev.quarkus.hibernate-orm.log.format-sql=true
 
-quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.log.bind-parameters=true
-quarkus.hibernate-orm.log.format-sql=true
+# Dev UI
 %dev.quarkus.datasource.dev-ui.allow-sql=true
+quarkus.dev-ui.enabled=true
